force-app/main/default/objects/Project__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>