force-app/main/default/objects/Project__c/fields/Project_name__c.field-meta.xml
<CustomField>
    <fullName>Project_name__c</fullName>
    <label>Project name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>