force-app/main/default/objects/Project__c/fields/start_date__c.field-meta.xml
<CustomField>
    <fullName>start_date__c</fullName>
    <label>start date</label>
    <type>Date</type>
</CustomField>