force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Project_name__c</columns>
    <columns>start_date__c</columns>
    <columns>End_date__c</columns>
    <columns>Status__c</columns>
    <columns>Developer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>